# timecalc

./: COPYING.wtfpl  README.md  README.rst  chronocalc.py  durations.py  pyproject.toml  setup.py  tests.py  timecalc.py
