[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timecalc"
dynamic = ["version"]
description = "timecalc - a date/time/duration calculator"
readme = "README.rst"
license = "WTFPL"
requires-python = ">=3"
authors = [
    { name = "Hg", email = "dev@indigo.re" },
]
keywords = [
    "date", "time", "datetime", "duration", "calculator", "repl", "evaluate", "compute",
]
dependencies = [
    "python-dateutil",
]

[project.scripts]
timecalc = "timecalc:main"

[project.urls]
Homepage = "https://gitlab.com/hydrargyrum/timecalc"

[tool.hatch.version]
path = "timecalc.py"

[tool.hatch.build.targets.sdist]
include = [
    "/timecalc.py",
]

[tool.hatch.build.targets.wheel.shared-data]
"README.rst" = "share/doc/timecalc/README.rst"
