[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronocalc"
dynamic = ["version"]
description = "chronocalc - a date/time/duration calculator"
readme = "README.rst"
license = "WTFPL"
requires-python = ">=3"
authors = [
    { name = "Hg", email = "dev@indigo.re" },
]
keywords = [
    "date", "time", "datetime", "duration", "calculator", "repl", "evaluate", "compute",
]
dependencies = [
    "python-dateutil",
]

[project.scripts]
chronocalc = "chronocalc:main"

[project.urls]
Homepage = "https://gitlab.com/hydrargyrum/timecalc"

[tool.hatch.version]
path = "chronocalc.py"

[tool.hatch.build.targets.sdist]
include = [
    "/chronocalc.py",
]

[tool.hatch.build.targets.wheel.shared-data]
"README.rst" = "share/doc/chronocalc/README.rst"
